2012-03-10 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx:
	  documented support for 18f1230/18f1330 device family

2012-03-10 Raphael Neider <rneider AT web.de>

	* Makefile.in:
	  device/lib build depends on sdcc-sdbinutils

	* device/include/pic16/adc.h,
	  device/include/pic16/pic16devices.txt,
	  device/include/pic16/pic18fregs.h,
	  device/lib/pic16/libio/Makefile.am,
	  device/lib/pic16/libio/adc/adcbusy.c,
	  device/lib/pic16/libio/adc/adcopen.c,
	  device/lib/pic16/libio/adc/adcsetch.c,
	  device/lib/pic16/libio/i2c.ignore,
	  device/lib/pic16/libio/usart/uopen.c,
	  device/non-free/include/pic16/pic18f1230.h,
	  device/non-free/include/pic16/pic18f1330.h,
	  device/non-free/lib/pic16/libdev/Makefile.am,
	  device/non-free/lib/pic16/libdev/pic18f1230.c,
	  device/non-free/lib/pic16/libdev/pic18f1330.c,
	  device/non-free/lib/pic16/pics.all,
	  support/scripts/pic18fam-h-gen.pl:
	  add support for 18f1230 and 18f1330 devices

	* device/lib/pic16/libio/mkmk.sh:
	  adjust path to pics.all

	* device/lib/pic16/libdev:
	  removed obsolete, empty directory

	* device/lib/pic16/libio/Makefile.in,
	  device/non-free/include/pic16/pic18fam.h,
	  device/non-free/lib/pic16/libdev/Makefile.in:
	  regenerated

2012-03-10 Borut Razem <borut.razem AT gmail.com>

	* doc/README.txt, doc/sdccman.lyx:
	  backslashes replaced with slashes in non-free paths;
	  obsoleted special sdcc keywords which are not preceded
	  by a double underscore
	* support/scripts/inc2h-pic16.pl, support/scripts/inc2h.pl:
	  added comment about Microchip "The header files should state
	  that they are only to be used with authentic Microchip
	  devices" requirement.

2012-03-10 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug #3501019.

2012-03-09 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genCast): fixed bug #3486542
	* support/regression/tests/gcc-torture-execute-pr15296.c: re-enabled

2012-03-09 Borut Razem <borut.razem AT gmail.com>
