@@ -62,9 +62,16 @@ usart_open (unsigned char config, sdcc_spbrg_t spbrg) __wparam
     RCSTAbits.SREN = 1;
 
   if (config & 0x10)
-    TXSTAbits.BRGH = 1;
+    {
+      TXSTAbits.BRGH = 1;
+#if !__SDCC_NO_SPBRGH
+      BAUDCONbits.BRG16 = 1;
+    }
   else
-    TXSTAbits.BRGH = 0;
+    {
+      BAUDCONbits.BRG16 = 0;
+#endif  /* !__SDCC_NO_SPBRGH */
+    }
 
   /* TX interrupts */
 #if defined(pic18f66j60) || defined(pic18f66j65) || \
